<resources>
    <string name="app_name">Timed Shutdown</string>
    <string name="title_settings">Settings</string>
    <string name="title_timer">Timer</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_info">Info</string>
    <string name="start_timer">Start</string>
    <string name="stop_timer">Stop</string>
    <string name="last_selected_timer">Last Timer</string>
    <string name="two_clicks">Two Clicks</string>
    <string name="three_clicks">Three Clicks</string>
    <string name="four_clicks">Four Clicks</string>
    <string name="five_clicks">Five Clicks</string>
    <string name="six_clicks">Six Clicks</string>
    <string name="swipe">Swipe</string>
    <string name="long_press">Long Press</string>
    <string name="one_click">One Click</string>
    <string name="reset">Reset</string>
    <string name="changeTimeFormat">12H/24H</string>
    <string name="H12">12H</string>
    <string name="H24">24H</string>
    <string name="img_call_power_dialog">Call power dialog</string>
    <string name="img_set_delay">Set Delay Dialog</string>
    <string name="img_help_button">Help button</string>
    <string name="info_text_1">This app uses the accessibility permission to simulate the manual gestures used to power off the phone. \n<b>The accessibility permission is required</b> in order to be able to call the power dialog and then simulate the gestures to turn off the phone. If your android version is at least 13, you may have to check the restricted settings section of your device.</string>
    <string name="info_button_desc">This button will open this tab</string>
    <string name="delay_button_desc">This button will open a dialog from which the user can set how much delay there should be between the screen gestures</string>
    <string name="reset_button_desc">This button will reset the position of the draggable items to the center of the screen</string>
    <string name="power_button_desc">This button will call the power dialog so that it is possible to check which action should be performed. <b>This button will not power off the phone</b>, it will just call the power dialog. To power off the phone use the timer in the Timer tab.</string>
    <string name="draggables_desc">These draggable elements can be repositioned around the screen to reproduce the gestures (click(s)/swipe) used to power off the phone</string>
    <string name="info_text_settings_1">On the <b>Settings tab</b> you have to set up the gestures that this app will simulate to shutdown your phone.\nWhile this app <b>automatically bring out the power dialog</b>, you have to give it instructions on <b>where the shutdown button is on your screen and how to interact with it</b>.\nFirst, select the type of gesture (one tap, two taps, three taps, a long press that lasts 5 seconds, or a swipe between point 1 and 2). Then, drag the numbered circles around the screen to correspond with where the shutdown button is on your power dialog screen.\nClick the button below to <b>watch a short video</b> about how it works.</string>
    <string name="info_text_settings_2">In case two clicks are selected the app will simulate first the click of circle one and then the click of circle two, with a delay that can be set with the hourglass button. In case the swipe is selected, the app will simulate a swipe from point one to point two.</string>
    <string name="info_text_timer">On the <b>Timer tab</b> it is possible to <b>set up a timer to power off the phone</b>. It is first necessary to give the accessibility permission and to set up the settings tab for the app to be able to emulate the power off gesture.\n<b>The timer is in seconds</b> and the spinner on the right will select how many seconds, the spinner on the center how many minutes, the spinner on the left how many hours the timer will wait before powering off the phone. The last timer manually selected can be restored with the button <b>Last Timer</b>.\n<b>This app should <i>theoretically</i> work even if the screen is off</b>, but that may vary based on the battery optimization, power saving mode, phone model and so on. It is suggested to leave the phone (even locked) on the timer tab after starting the countdown. The power off gestures could require extra time after the set timer if the time while the screen is totally off is more than 5 minutes.</string>
    <string name="info_text_schedule">On the <b>Schedule tab</b> it is possible to <b>schedule up to 10 alarms to power off the phone</b>. It is first necessary to do the same setup required by the timer tab.\nYou can switch between 24 and 12 hour format with the button, all the timers and time pickers will be displayed like that.\nIt is possible to create new schedules by clicking on the + green button at the bottom of the screen; each schedule can be switched on and off with the switch button and it can be removed with the delete (bin) button. To set the hour when it will shut down the phone you can click on the schedule and a time picker will be shown.\nIt is possible to set the schedule as a repeating one with the toggle buttons at the bottom of each schedule. If none of them are activate the alarm will only repeat once and then turn itself off, else it will repeat at the set hour every week at the specified day(s).\nA permanent notification alerting of the next shutdown can be activated with the button Notification On/Off, but only if the notifications are allowed.\n<b>Please keep in mind</b> that according to the official documentation, <b>setting up schedules can be extremely expensive on battery use</b>.</string>
    <string name="alert_permission_title">Permission</string>
    <string name="alert_permission_text">The accessibility permission is required to emulate the power off gesture.\nPlease enable it in the settings of your device.</string>
    <string name="alert_permission_text_API33">The accessibility permission is required to emulate the power off gesture.\nPlease enable it in the restricted settings section of your device.</string>
    <string name="alert_permission_SETTINGS">SETTINGS</string>
    <string name="alert_permission_cancel">Cancel</string>
    <string name="alert_permission_ok">OK</string>
    <string name="alert_settings_text">Remember to set in the Settings tab the movement to power off the phone.\nIf you need help consult the Info tab.</string>
    <string name="alert_settings_hours_format">Choose between 24 hours format and 12 hours format in the schedule tab.</string>
    <string name="info_title_tile">Quick Action Tile</string>
    <string name="info_text_tile">You may add a quick tile to your drawer menu to restart the shutdown process with the last used timer in the timer screen. The actions on the timer screen is synchronized with the tile.</string>
    <string name="info_title_automate">Automate</string>
    <string name="info_text_automate">You may automate the shutdown process using other apps such as Tasker or Automate by starting the Activity <i>com.maforn.timedshutdown.AutomationSupportActivity</i> if you want to start the last used motion, or instead <i>com.maforn.timedshutdown.AutomationSupportActivityConfig1</i> to use config1 and <i>com.maforn.timedshutdown.AutomationSupportActivityConfig2</i> for config2.</string>
    <string name="info_title_contribute">Contribute</string>
    <string name="info_text_contribute">This app is open-source; you can contribute to the development, request new features or signal any bugs on the <a href="https://github.com/maforn/TimedShutdownAndroid">github page</a>.</string>
    <string name="accessibility_description">The app requires the accessibility permission to emulate the manual gestures that are used to power off the phone. The permission will not be used for anything else.</string>
    <string name="repeat">Repeat:</string>
    <string name="friday">F</string>
    <string name="monday">M</string>
    <string name="sunday">S</string>
    <string name="saturday">S</string>
    <string name="tuesday">T</string>
    <string name="thursday">T</string>
    <string name="wednesday">W</string>
    <string name="scrollable_description">Scrollable list of scheduled shut down</string>
    <string name="not_performed">Action not performed, is the accessibility permission missing?</string>
    <string name="schedule_disclaimer">Here you can schedule specific power off alarms. Keep in mind that this is really taxing on the battery of the phone.</string>
    <string name="circle_six">Circle six</string>
    <string name="circle_five">Circle five</string>
    <string name="circle_four">Circle four</string>
    <string name="circle_three">Circle three</string>
    <string name="circle_two">Circle two</string>
    <string name="circle_one">Circle one</string>
    <string name="h12h24_button_desc">This button will open a dialog to select the preference between 12 and 24 hours format</string>
    <string name="required_ignoring_optimization">Ignoring Battery Optimization is required for the app to work.</string>
    <string name="battery_optimization">Battery Optimization</string>
    <string name="battery_optimization_toast">Ignoring battery optimization is required for this app to work.\nPlease enable it in the settings of your device.</string>
    <string name="widget_description">Quick Shutdown</string>
    <string name="quick_config_1">Quick Config 1</string>
    <string name="quick_config_2">Quick Config 2</string>
    <string name="shortcut_standard_short_label">Standard</string>
    <string name="shortcut_automation_long_label">Open Automation Support</string>

    <string name="shortcut_config1_short_label">Config 1</string>
    <string name="shortcut_config1_long_label">Open Automation Support (Config 1)</string>

    <string name="shortcut_config2_short_label">Config 2</string>
    <string name="shortcut_config2_long_label">Open Automation Support (Config 2)</string>
    <string name="quick_tile_start">Timer restarted</string>
    <string name="quick_tile_stop">Timer stopped</string>
    <string name="quick_tile_label">Last Timer</string>
    <string name="config_button_desc">The config buttons are shortcuts to movement and time delay configurations, they can be loaded by clicking on them and saved using the save button.</string>
    <string name="save_button_desc">This button saves the current settings to the selected configuration. It saved the power off method, all the time delays and the draggables positions.</string>
    <string name="rotate_button_desc">This button rotate the screen layout for the shutdown procedure between portait and landscape.</string>

</resources>