<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_timer">

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.maforn.timedshutdown.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settingsFragment_to_infoFragment"
            app:destination="@id/navigation_info"
            app:launchSingleTop="true"
            app:popUpTo="@+id/mobile_navigation"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_timer"
        android:name="com.maforn.timedshutdown.ui.timer.TimerFragment"
        android:label="@string/title_timer"
        tools:layout="@layout/fragment_timer">
        <action
            android:id="@+id/action_timerFragment_to_settingsFragment"
            app:destination="@id/navigation_settings"
            app:launchSingleTop="true"
            app:popUpTo="@+id/mobile_navigation"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_timerFragment_to_infoFragment"
            app:destination="@id/navigation_info"
            app:launchSingleTop="true"
            app:popUpTo="@+id/mobile_navigation"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.maforn.timedshutdown.ui.schedule.ScheduleFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_schedule">
        <action
            android:id="@+id/action_scheduleFragment_to_infoFragment"
            app:destination="@id/navigation_info"
            app:launchSingleTop="true"
            app:popUpTo="@+id/mobile_navigation"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.maforn.timedshutdown.ui.info.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />
</navigation>